<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/spotname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/spot_name"
        android:textColor="#000000"
        android:clickable="false"
        android:focusable="false"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_toLeftOf="@id/favbutton"
        android:layout_toStartOf="@id/favbutton" />

    <ImageButton
        android:id="@+id/favbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/normal_star_button"
        android:text="@string/fav_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/countryname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/spotname"
        android:text="@string/country_name"
        android:clickable="false"
        android:focusable="false"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_toLeftOf="@id/favbutton"
        android:layout_toStartOf="@id/favbutton" />

</RelativeLayout>