<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/country"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:autofillHints="Country name"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/wind_probability"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:autofillHints="Value between 1 and 100"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/applyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:text="@string/apply" />

</LinearLayout>